# ChangeLog for dev-ruby/rspec-rails
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.34 2010/10/10 07:45:12 graaff Exp $

*rspec-rails-1.3.3 (10 Oct 2010)

  10 Oct 2010; Hans de Graaff <graaff@gentoo.org> +rspec-rails-1.3.3.ebuild:
  Version bump.

*rspec-rails-1.3.2-r1 (26 Sep 2010)

  26 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  +rspec-rails-1.3.2-r1.ebuild:
  Add ree18 target.

  07 Jun 2010; Christoph Mende <angelos@gentoo.org>
  rspec-rails-1.2.9.ebuild:
  amd64 stable (bug #305607)

  11 Apr 2010; <nixnut@gentoo.org> rspec-rails-1.2.9.ebuild:
  ppc stable #305607

  03 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rspec-rails-1.2.9.ebuild:
  x86 stable wrt bug #305607

  13 Feb 2010; Raúl Porcel <armin76@gentoo.org> rspec-rails-1.3.1.ebuild,
  rspec-rails-1.3.2.ebuild:
  Add ~sparc

  03 Feb 2010; Markus Meier <maekke@gentoo.org> rspec-rails-1.3.2.ebuild:
  add ~x86, bug #300739

  14 Jan 2010; Brent Baude <ranger@gentoo.org> rspec-rails-1.3.2.ebuild:
  Marking rspec-rails-1.3.2 ~ppc for bug 300739

  14 Jan 2010; Brent Baude <ranger@gentoo.org> rspec-rails-1.3.2.ebuild:
  Marking rspec-rails-1.3.2 ~ppc64 for bug 300739

  13 Jan 2010; Brent Baude <ranger@gentoo.org> rspec-rails-1.3.1.ebuild:
  Marking rspec-rails-1.3.1 ~ppc64 for bug 300739

*rspec-rails-1.3.2 (13 Jan 2010)

  13 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +rspec-rails-1.3.2.ebuild:
  Version bump.

*rspec-rails-1.3.1 (12 Jan 2010)

  12 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -rspec-rails-1.3.0.ebuild, +rspec-rails-1.3.1.ebuild:
  Version bump.

  12 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  rspec-rails-1.3.0.ebuild:
  And install generators as well.

*rspec-rails-1.3.0 (12 Jan 2010)

  12 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +rspec-rails-1.3.0.ebuild:
  Version bump and move to ruby-fakegem. Tests cannot be executed though.
