@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rspec
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.82 2010/12/03 18:05:18 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.83 2010/12/27 18:42:26 graaff Exp $
+
+  27 Dec 2010; Hans de Graaff <graaff@gentoo.org> -rspec-1.3.0.ebuild,
+  -rspec-1.3.0-r1.ebuild:
+  Remove old versions.
 
   02 Dec 2010; Fabian Groffen <grobian@gentoo.org> rspec-1.3.1.ebuild,
   rspec-2.0.0_beta22.ebuild:
