@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rspec-rails
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.34 2010/10/10 07:45:12 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.35 2010/12/27 18:43:59 graaff Exp $
+
+  27 Dec 2010; Hans de Graaff <graaff@gentoo.org> -rspec-rails-1.3.1.ebuild,
+  -rspec-rails-1.3.2.ebuild, -rspec-rails-1.3.2-r1.ebuild:
+  Remove old versions.
 
 *rspec-rails-1.3.3 (10 Oct 2010)
 
